Исправляет замечания