@@ -1,80 +1,53 @@
 package school.faang.bjs_47121;
 
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Stream;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class ListOperations2Test {
 
-    private static Stream<Arguments> getNumbersAndSum() {
-        return Stream.of(
-                Arguments.of(Arrays.asList(1, 2, 3, 4, 5, 6), 7,
-                        Map.of(1, 6, 2, 5, 3, 4))
-        );
+    @Test
+    void getPairOfNumbers() {
+        List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 6);
+        int sum = 7;
+        Set<List<Integer>> expected = Set.of(List.of(1, 6), List.of(2, 5), List.of(3, 4));
+        Set<List<Integer>> actual = ListOperations2.getPairOfNumbers(numbers, sum);
+        assertEquals(expected, actual);
     }
 
-    private static Stream<Arguments> getCountries() {
-        return Stream.of(
-                Arguments.of(Map.of("Russia", "Moscow", "USA", "Washington",
-                        "Germany", "Berlin"), Arrays.asList("Berlin", "Moscow", "Washington"))
-        );
-    }
-
-    private static Stream<Arguments> getStringsAndLetter() {
-        return Stream.of(
-                Arguments.of(Arrays.asList("apple", "banana", "avocado", "apricot"), 'a',
-                        Arrays.asList("apple", "avocado", "apricot"))
-        );
-    }
-
-    private static Stream<Arguments> getNumbersAndBinaryStrings() {
-        return Stream.of(
-                Arguments.of(Arrays.asList(1, 2, 3, 4), Arrays.asList("1", "10", "11", "100"))
-        );
-    }
-
-    private static Stream<Arguments> getStringsAndFilter() {
-        return Stream.of(
-                Arguments.of(Arrays.asList("apple", "banana", "cherry", "date", "fig", "grape"),
-                        "abcdefghijklmnopqrstuvwxyz",
-                        Arrays.asList("fig", "date", "apple", "grape", "banana", "cherry"))
-        );
-    }
-
-    @ParameterizedTest
-    @MethodSource("getNumbersAndSum")
-    void getPairOfNumbers(List<Integer> numbers, int sum, Map<Integer, Integer> expected) {
-        assertEquals(expected, ListOperations2.getPairOfNumbers(numbers, sum));
-    }
-
-    @ParameterizedTest
-    @MethodSource("getCountries")
-    void getCapitals(Map<String, String> countries, List<String> expected) {
+    @Test
+    void getCapitals() {
+        Map<String, String> countries = Map.of("Russia", "Moscow", "USA", "Washington",
+                "Germany", "Berlin");
+        List<String> expected = Arrays.asList("Berlin", "Moscow", "Washington");
         assertEquals(expected, ListOperations2.getCapitals(countries));
     }
 
-    @ParameterizedTest
-    @MethodSource("getStringsAndLetter")
-    void getFilteredAndSortedStrings(List<String> strings, char letter, List<String> expected) {
+    @Test
+    void getFilteredAndSortedStrings() {
+        List<String> strings = Arrays.asList("apple", "banana", "avocado", "apricot");
+        char letter = 'a';
+        List<String> expected = Arrays.asList("apple", "avocado", "apricot");
         assertEquals(expected, ListOperations2.getFilteredAndSortedStrings(strings, letter));
     }
 
-    @ParameterizedTest
-    @MethodSource("getNumbersAndBinaryStrings")
-    void getNumbersInBinary(List<Integer> numbers, List<String> expected) {
+    @Test
+    void getNumbersInBinary() {
+        List<Integer> numbers = Arrays.asList(1, 2, 3, 4);
+        List<String> expected = Arrays.asList("1", "10", "11", "100");
         assertEquals(expected, ListOperations2.getNumbersInBinary(numbers));
     }
 
-    @ParameterizedTest
-    @MethodSource("getStringsAndFilter")
-    void getFilteredByAlphabetAndSortedStrings(List<String> strings, String filterString, List<String> expected) {
+    @Test
+    void getFilteredByAlphabetAndSortedStrings() {
+        List<String> strings = Arrays.asList("apple", "banana", "cherry", "date", "fig", "grape");
+        String filterString = "abcdefghijklmnopqrstuvwxyz";
+        List<String> expected = Arrays.asList("fig", "date", "apple", "grape", "banana", "cherry");
         assertEquals(expected, ListOperations2.getFilteredByAlphabetAndSortedStrings(strings, filterString));
     }
 }
